--- a/config/database.yml
+++ b/config/database.yml
@@ -75,11 +75,11 @@ test:
 #
 # You can use this database configuration with:
 #
-#   production:
-#     url: <%= ENV['DATABASE_URL'] %>
-#
 production:
-  <<: *default
-  database: raidators_project_production
-  username: raidators_project
-  password: <%= ENV['RAIDATORS_PROJECT_DATABASE_PASSWORD'] %>
+  url: <%= ENV['DATABASE_URL'] %>
+#
+# production:
+#   <<: *default
+#   database: raidators_project_production
+#   username: raidators_project
+#   password: <%= ENV['RAIDATORS_PROJECT_DATABASE_PASSWORD'] %>
